--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
             href="https://fonts.googleapis.com/css?family=Roboto:400,700"
             rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
     </head>
 
     <body>
         <div class="home">
             <header class="nav nav--expand">
-                <h2><a href="#">S&J</a></h2>
+                <h2>
+                    <a href="#">S&J</a>
+                </h2>
 
                 <div class="nav-btn"></div>
 
@@ -45,16 +47,16 @@
                         no errem.</p>
                     <button>Learn More</button>
                 </div>
-				<!-- Image -->
-				<div class="top--image">
-					<img src="./img//home/home-img-1.png" alt="home">
-				</div>
+                <!-- Image -->
+                <div class="top--image">
+                    <img src="./img//home/home-img-1.png" alt="home">
+                </div>
             </section>
 
             <section class="learn--bottom">
-				<div class="bottom--image">
-					<img src="./img/home/home-img-2.png" alt="home">
-				</div>
+                <div class="bottom--image">
+                    <img src="./img/home/home-img-2.png" alt="home">
+                </div>
                 <div class="bottom--content">
                     <h3>Futuristic Designs</h3>
                     <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
@@ -79,7 +81,7 @@
                         domination. At the end of the day, going forward, a new normal that has evolved
                         from generation X is on the runway heading towards a streamlined cloud solution.
                     </p>
-					<br>
+                    <br>
                     <p>Capitalize on low hanging fruit to identify a ballpark value added activity
                         to beta test. Override the digital divide with additional clickthroughs from
                         DevOps. Nanotechnology immersion along the information highway will close the
@@ -101,7 +103,7 @@
                         has evolved from generation X is on the runway heading towards a streamlined
                         cloud solution.
                     </p>
-					<br>
+                    <br>
                     <p>Capitalize on low hanging fruit to identify a ballpark value added activity
                         to beta test. Override the digital divide with additional clickthroughs from
                         DevOps. Nanotechnology immersion along the information highway will close the
@@ -123,24 +125,22 @@
                         has evolved from generation X is on the runway heading towards a streamlined
                         cloud solution.
                     </p>
-					<br>
+                    <br>
                     <p>Capitalize on low hanging fruit to identify a ballpark value added activity
                         to beta test. Override the digital divide with additional clickthroughs from
                         DevOps. Nanotechnology immersion along the information highway will close the
                         loop on focusing solely on the bottom line.</p>
                 </div>
-			</section>
-			
-			
+            </section>
 
             <!-- Footer -->
             <footer>
                 <div class="footer">
                     <div class="footer--contact">
-						<h4>Interested in starting a project?</h4>
-						<br>
-						<h4>Let's talk:</h4>
-						<br>
+                        <h4>Interested in starting a project?</h4>
+                        <br>
+                        <h4>Let's talk:</h4>
+                        <br>
                         <input type="email" placeholder="johndoe@example.com">
                         <p>We'll never share your email with anyone else.</p>
                     </div>
@@ -148,44 +148,44 @@
                     <!-- New York -->
                     <div class="addresses">
                         <address>
-							<h4>New York</h4>
-							<br>
+                            <h4>New York</h4>
+                            <br>
                             <p>123 Lane</p>
-							<br>
-							<p>Suite 100</p>
-							<br>
-							<p>Albany, NY 12345</p>
-							<br>
-							<p>202 555 0144</p>
+                            <br>
+                            <p>Suite 100</p>
+                            <br>
+                            <p>Albany, NY 12345</p>
+                            <br>
+                            <p>202 555 0144</p>
                         </address>
                         <!-- Florida -->
                         <address>
-							<h4>Florida</h4>
-							<br>							
+                            <h4>Florida</h4>
+                            <br>
                             <p>Ocean Drive</p>
-							<br>							
-							<p>Suite 201</p>
-							<br>							
-							<p>Orlando, FL 22345</p>
-							<br>							
-							<p>502 555 0144</p>
+                            <br>
+                            <p>Suite 201</p>
+                            <br>
+                            <p>Orlando, FL 22345</p>
+                            <br>
+                            <p>502 555 0144</p>
                         </address>
                         <!-- California -->
                         <address>
-							<h4>California</h4>
-							<br>							
+                            <h4>California</h4>
+                            <br>
                             <p>Mountain Street</p>
-							<br>							
-							<p>Suite 105</p>
-							<br>							
-							<p>San Diego, CA 22345</p>
-							<br>							
-							<p>702 555 0144</p>
+                            <br>
+                            <p>Suite 105</p>
+                            <br>
+                            <p>San Diego, CA 22345</p>
+                            <br>
+                            <p>702 555 0144</p>
                         </address>
                     </div>
-				</div>
-				
-				<copyright>Copyright © 2018 Smith and Jones</copyright>
+                </div>
+
+                <copyright>Copyright © 2018 Smith and Jones</copyright>
             </footer>
         </div>
 
