--- a/services.html
+++ b/services.html
@@ -1,38 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Services</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/index.css">
-	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>S&J Architects</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto:400,700"
+            rel="stylesheet">
+        <link rel="stylesheet" href="css/index.css">
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+    </head>
 
-<body>
+    <body>
+        <div class="services">
+            <header class="nav nav--expand">
+                <h2>
+                    <a href="#">S&J</a>
+                </h2>
 
-	<h1>Services</h1>
+                <div class="nav-btn"></div>
 
-<!-- Services Content 
-  Services
-  
-  Services include: completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.
--->
+                <nav>
+                    <a href="#" class="href">Home</a>
+                    <a href="#" class="href">Services</a>
+                    <a href="#" class="href">Contact</a>
+                </nav>
+            </header>
+            <!-- Intro Text -->
+            <section class="services--intro">
+                <div class="intro--text">
+                    <h1>Services</h1>
+                </div>
+            </section>
 
-<!-- *** NOTE *** Tab Navigator Content: I used the same text for each tab to make it easy, Note that the images and text do change on click but you can just use the same text for each tab element.  All the images should be in the img folder.
+            <!-- Learn about services -->
+            <div class="services--about">
+                <p>Services include: completely synergize resource taxing relationships via
+                    premier niche markets. Professionally cultivate one-to-one customer service with
+                    robust ideas. Dynamically innovate resource-leveling customer service for state
+                    of the art customer service.</p>
+            </div>
 
-  Pre-Construction
-  Construction
-  Design Build
-  Sustainability
+            <!-- buttons -->
+            <section class="button-container">
+                <button class="services--btn">Pre-Construction</button>
+                <button class="services--btn">Construction</button>
+                <button class="services--btn">Design Build</button>
+                <button class="services--btn">Sustainability</button>
+            </section>
 
-  Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.  Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.
+            <!-- button content -->
+            <section class='services-container'>
+                <div class='services--card' data-tab='1'>
+                    <div class='services--text'>
+                        <h2>Pre-Construction</h2>
+                        <p>Completely synergize resource taxing relationships via premier niche markets.
+                            Professionally cultivate one-to-one customer service with robust ideas.
+                            Dynamically innovate resource-leveling customer service for state of the art
+                            customer service.</p>
+                        <br>
+                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                            Interactively coordinate proactive e-commerce via process-centric 'outside the
+                            box' thinking. Completely pursue scalable customer service through sustainable
+                            potentialities.</p>
+                    </div>
+                    <div class='content-img'><img src='./img/services/services-tab-pre-construction-img.png' alt=''></div>
+                </div>
+                <div class='services--card active--card' data-tab='2'>
+                    <div class='services--text'>
+                        <h2>Construction</h2>
+                        <p>Completely synergize resource taxing relationships via premier niche markets.
+                            Professionally cultivate one-to-one customer service with robust ideas.
+                            Dynamically innovate resource-leveling customer service for state of the art
+                            customer service.</p>
+                        <br>
+                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                            Interactively coordinate proactive e-commerce via process-centric 'outside the
+                            box' thinking. Completely pursue scalable customer service through sustainable
+                            potentialities.</p>
+                    </div>
+                    <div class='content-img'><img src='./img/services/services-tab-construction-img.png' alt=''></div>
+                </div>
+                <div class='services--card' data-tab='3'>
+                    <div class='services--text'>
+                        <h2>Design Build</h2>
+                        <p>Completely synergize resource taxing relationships via premier niche markets.
+                            Professionally cultivate one-to-one customer service with robust ideas.
+                            Dynamically innovate resource-leveling customer service for state of the art
+                            customer service.</p>
+                        <br>
+                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                            Interactively coordinate proactive e-commerce via process-centric 'outside the
+                            box' thinking. Completely pursue scalable customer service through sustainable
+                            potentialities.</p>
+                    </div>
+                    <div class='content-img'><img src='./img/services/services-tab-design-build-img.png' alt=''></div>
+                </div>
+                <div class='services--card' data-tab='4'>
+                    <div class='services--text'>
+                        <h2>Sustainability</h2>
+                        <p>Completely synergize resource taxing relationships via premier niche markets.
+                            Professionally cultivate one-to-one customer service with robust ideas.
+                            Dynamically innovate resource-leveling customer service for state of the art
+                            customer service.</p>
+                        <br>
+                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                            Interactively coordinate proactive e-commerce via process-centric 'outside the
+                            box' thinking. Completely pursue scalable customer service through sustainable
+                            potentialities.</p>
+                    </div>
+                    <div class='content-img'><img src='./img/services/services-tab-sustainability-img.png' alt=''></div>
+                </div>
+            </section>
+        </div>
 
+        <!-- Footer -->
+        <!-- Footer -->
+        <footer>
+            <div class="footer">
+                <div class="footer--contact">
+                    <h4>Interested in starting a project?</h4>
+                    <br>
+                    <h4>Let's talk:</h4>
+                    <br>
+                    <input type="email" placeholder="johndoe@example.com">
+                    <p>We'll never share your email with anyone else.</p>
+                </div>
+                <!-- Addresses -->
+                <!-- New York -->
+                <div class="addresses">
+                    <address>
+                        <h4>New York</h4>
+                        <br>
+                        <p>123 Lane</p>
+                        <br>
+                        <p>Suite 100</p>
+                        <br>
+                        <p>Albany, NY 12345</p>
+                        <br>
+                        <p>202 555 0144</p>
+                    </address>
+                    <!-- Florida -->
+                    <address>
+                        <h4>Florida</h4>
+                        <br>
+                        <p>Ocean Drive</p>
+                        <br>
+                        <p>Suite 201</p>
+                        <br>
+                        <p>Orlando, FL 22345</p>
+                        <br>
+                        <p>502 555 0144</p>
+                    </address>
+                    <!-- California -->
+                    <address>
+                        <h4>California</h4>
+                        <br>
+                        <p>Mountain Street</p>
+                        <br>
+                        <p>Suite 105</p>
+                        <br>
+                        <p>San Diego, CA 22345</p>
+                        <br>
+                        <p>702 555 0144</p>
+                    </address>
+                </div>
+            </div>
 
+            <copyright>Copyright © 2018 Smith and Jones</copyright>
+        </footer>
 
--->
+    </div>
 
-	<script src="js/index.js"></script>
+    <script src="js/index.js"></script>
+
 </body>
 </html>
